# ScrewEngineOld

./: .gitignore  CMakeLists.txt  README.md
include/: ScrewBaseCompnent.h  ScrewClock.h  ScrewDisplay.h  ScrewInput.h  ScrewRenderer.h
src/: ScrewClock.cpp  ScrewDisplay.cpp  ScrewEngine.cpp  ScrewInput.cpp  ScrewRenderer.cpp  main.cpp
